--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,40 @@
         <artifactId>groovy-all</artifactId>
         <version>2.1.6</version>
     </dependency>
+    <!--Hiba-->
+    <!-- YouTube Data API Client Library for Java -->
+    <dependency>
+        <groupId>com.google.apis</groupId>
+        <artifactId>google-api-services-youtube</artifactId>
+        <version>v3-rev180-1.22.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mortbay.jetty/jetty -->
+    <dependency>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>jetty</artifactId>
+        <version>6.1.26</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client-jetty -->
+    <dependency>
+        <groupId>com.google.oauth-client</groupId>
+        <artifactId>google-oauth-client-jetty</artifactId>
+        <version>1.12.0-beta</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client-java6 -->
+    <dependency>
+        <groupId>com.google.oauth-client</groupId>
+        <artifactId>google-oauth-client-java6</artifactId>
+        <version>1.22.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/com.flickr4java/flickr4java -->
+    <dependency>
+        <groupId>com.flickr4java</groupId>
+        <artifactId>flickr4java</artifactId>
+        <version>2.11</version>
+    </dependency>
+
+
 </dependencies>
 
 </project>
